# bazel_python_repo

./: BUILD.bazel  README.md  WORKSPACE.bazel
internal/: BUILD.dist.bazel.tpl  python_interpreter.bzl
python_projects/acme_corp/app1/: BUILD.bazel
python_projects/acme_corp/app1/src/acme_corp/app1/: app1_module1.py  app1_module2.py
python_projects/acme_corp/lib1/: BUILD.bazel  README.md  setup.cfg  setup.py
python_projects/acme_corp/lib1/src/acme_corp/lib1/: lib1_module1.py
python_projects/acme_corp/lib1/tests/unit/: BUILD  BUILD.bazel  lib1_module2_test.py
