load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "python_interpreter",
#     urls = ["https://www.python.org/ftp/python/3.7.10/Python-3.7.10.tar.xz"],
#     sha256 = "9e34914bc804ab2e7d955b49c5e1e391",
#     strip_prefix = "Python-3.7.10",
#     patch_cmds = [
#         "mkdir $(pwd)/bazel_install",
#         _py_configure,
#         "make",
#         "make install",
#         "ln -s bazel_install/bin/python3 python_bin",
#     ],
#     build_file_content = """
# exports_files(["python_bin"])
# filegroup(
#     name = "files",
#     srcs = glob(["bazel_install/**"], exclude = ["**/* *"]),
#     visibility = ["//visibility:public"],
# )
# """,
# )

rules_python_version = "740825b7f74930c62f44af95c9a4c1bd428d2c53" # Latest @ 2021-06-23

http_archive(
    name = "rules_python",
    sha256 = "09a3c4791c61b62c2cbc5b2cbea4ccc32487b38c7a2cc8f87a794d7a659cc742",
    strip_prefix = "rules_python-{}".format(rules_python_version),
    url = "https://github.com/bazelbuild/rules_python/archive/{}.zip".format(rules_python_version),
)


load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "my_python_deps",
    requirements = "//third_party:requirements.txt",
)

http_archive(
    name = "rules_python_pytest",
    sha256 = "62c3b72e997743d1b3934348cadad7a0906efaa5139b24c39efa189fd3e2142d",
    strip_prefix = "rules_python_pytest-1.0.1",
    url = "https://github.com/caseyduquettesc/rules_python_pytest/archive/v1.0.1.tar.gz",
)

# Fetches the rules_python_pytest dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_python_pytest//python_pytest:repositories.bzl", "rules_python_pytest_dependencies")
rules_python_pytest_dependencies()


# load("@rules_python//python:pip.bzl", "pip_repositories")

# pip_repositories()