# BUILD.bazel
# load("@py_deps//:requirements.bzl", "requirement")
# load("@rules_pkg//:pkg.bzl", "pkg_tar")
# load("@rules_python//python:defs.bzl", "py_runtime_pair")

# py_runtime(
#     name = "python3_runtime",
#     files = ["@python_interpreter//:files"],
#     interpreter = "@python_interpreter//:python_bin",
#     python_version = "PY3",
#     visibility = ["//visibility:public"],
# )

# py_runtime_pair(
#     name = "my_py_runtime_pair",
#     py2_runtime = None,
#     py3_runtime = ":python3_runtime",
# )

# toolchain(
#     name = "my_py_toolchain",
#     toolchain = ":my_py_runtime_pair",
#     toolchain_type = "@bazel_tools//tools/python:toolchain_type",
# )

# register_toolchains("//:my_py_toolchain")

py_library(
    name = 'acme_corp.app1',
    imports = ['src'],
    srcs = glob(['src/acme_corp/app1/*.py']),
)

py_binary(
    name = 'app1_module1',
    srcs = ['src/acme_corp/app1/app1_module1.py'],
    legacy_create_init=False,
    deps = [
        '//python_projects/acme_corp/lib1:acme_corp.lib1',
        ':acme_corp.app1',
    ]
)