load("@my_python_deps//:requirements.bzl", "requirement")
load("@rules_python_pytest//python_pytest:defs.bzl", "py_pytest_test")

py_pytest_test(
    name="unit",
    size="small",
    srcs=glob(['*_test.py']),
    deps=[
        requirement("pytest"),
        '//python_projects/acme_corp/lib1:acme_corp.lib1',
    ]
)
